# claude-code-workshop

./: .gitignore  DEPLOY.md  README.md  index.html  viewer.html
appendix/: gcc-reskin.md
days/: block-01-setup-and-thesis.md  block-02-structured-intent.md  block-03-plan-build.md  block-04-verify.md  block-05-pick-track.md  block-06-wrap.md
resources/: bad-vs-good-prompts.md  claude-md-template.md  eval-harness.md  facilitator-notes.md  free-options.md  further-reading.md  glossary.md  how-claude-code-works.md  ksa-payments.md  plan-mode.md  prd-template.md  prerequisites.md  seed-repo.md
seed/: .gitignore  CLAUDE.md  PRD.md  README.md  dashboard.html  pyproject.toml
seed/.claude/commands/: implement.md  verify.md
seed/inbox/: sample-01.txt  sample-02.txt  sample-03.txt  sample-04.txt  sample-05.txt  sample-06.txt  sample-07.txt  sample-08.txt  sample-09.txt  sample-10.txt
seed/migrations/: 0001_init.sql
seed/src/receipts/: __init__.py  cli.py  extract.py  ledger.py  report.py
seed/tests/: conftest.py  test_ledger.py  test_report.py  test_schema.py
seed/tests/fixtures/extractions/: .gitkeep
seed/tests/golden/: may.csv
tracks/: track-a-cli.md  track-b-web.md  track-c-agent.md  track-d-mcp.md
