[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "receipts"
version = "0.1.0"
description = "Receipt folder processor — extracts fields, dedupes, emits deterministic CSV"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.25",
    "click>=8.1",
]

[project.scripts]
receipts = "receipts.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/receipts"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
